button align issue ressolved

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -89,7 +89,7 @@ body{
     }
     &__btns{
         // background-color: #333;
-        transform: translate(-180%,-50%);
+        transform: translate(-180%,40%);
         z-index:100;
     }
     &__btn{
